# app/routes/api/user.router.js
@@ -2,6 +2,7 @@ import { Router } from "express";
 import multer from "multer";
 import { userController } from "../../http/controllers/user.controller.js";
 import { authorizeRequest, authorizeAdmin } from "../../http/middlewares/auth.middleware.js";
+import { upload } from "../../utils/multer.config.js";
 
 const userRouter = Router();
 
@@ -22,7 +23,7 @@ userRouter.get(
 
 userRouter.put(
     "/users/:id",
-    multer().none(),
+    upload.single("profile_pic"),
     authorizeRequest,
     authorizeAdmin,
     userController.updateUser
